[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Titillium-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Pause_Popup.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[node name="Pause_Popup" type="WindowDialog"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -272.0
margin_right = 142.0
margin_bottom = 128.0
rect_min_size = Vector2( 280, 230 )
custom_fonts/title_font = SubResource( 1 )
window_title = "Game paused"
script = ExtResource( 2 )
testing_area_scene = "res://Testing_Area.gd"

[node name="Button_resume" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -67.1821
margin_right = 130.0
margin_bottom = -7.18207
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="Button_quitgame" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -202.42
margin_right = 130.0
margin_bottom = -142.42
custom_fonts/font = SubResource( 1 )
text = "Quit Game"

[node name="Button_load" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.097
margin_top = -200.878
margin_right = 130.903
margin_bottom = -140.878
custom_fonts/font = SubResource( 1 )
text = "Load"

[node name="Button_save" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -332.01
margin_right = 130.0
margin_bottom = -272.011
custom_fonts/font = SubResource( 1 )
text = "Save"

[node name="Button_quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -133.867
margin_right = 130.0
margin_bottom = -73.8675
custom_fonts/font = SubResource( 1 )
text = "Quit to title"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -138.0
margin_top = 2.0
margin_right = 142.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.767365, 0.753906, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "GAME PAUSED"
align = 1
valign = 1

[node name="load" type="WindowDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.687
margin_top = -190.734
margin_right = 141.313
margin_bottom = 209.266
rect_min_size = Vector2( 280, 230 )
custom_fonts/title_font = SubResource( 1 )
window_title = "Game paused"

[node name="Button_load1" type="Button" parent="load"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.33
margin_top = -322.696
margin_right = 130.67
margin_bottom = -262.696
custom_fonts/font = SubResource( 1 )
text = "Load 1"

[node name="Button_load2" type="Button" parent="load"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -131.0
margin_top = -257.331
margin_right = 129.0
margin_bottom = -197.331
custom_fonts/font = SubResource( 1 )
text = "Load 2"

[node name="Button_load3" type="Button" parent="load"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -131.0
margin_top = -192.733
margin_right = 129.0
margin_bottom = -132.733
custom_fonts/font = SubResource( 1 )
text = "Load 3"

[node name="Button_resume" type="Button" parent="load"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -63.1715
margin_right = 131.0
margin_bottom = -3.17151
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="save" type="WindowDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.055
margin_top = -194.773
margin_right = 138.945
margin_bottom = 205.227
rect_min_size = Vector2( 280, 230 )
custom_fonts/title_font = SubResource( 1 )
window_title = "Game paused"

[node name="Button_save1" type="Button" parent="save"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -131.903
margin_top = -308.257
margin_right = 128.097
margin_bottom = -248.257
custom_fonts/font = SubResource( 1 )
text = "Save 1"

[node name="Button_save2" type="Button" parent="save"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -131.903
margin_top = -240.183
margin_right = 128.097
margin_bottom = -180.183
custom_fonts/font = SubResource( 1 )
text = "Save 2"

[node name="Button_save3" type="Button" parent="save"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -131.903
margin_top = -172.878
margin_right = 128.097
margin_bottom = -112.878
custom_fonts/font = SubResource( 1 )
text = "Save 3"

[node name="Button_resume" type="Button" parent="save"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -68.1821
margin_right = 131.0
margin_bottom = -8.18207
custom_fonts/font = SubResource( 1 )
text = "Resume"

[connection signal="pressed" from="Button_quitgame" to="." method="_on_Button_quitgame_pressed"]
[connection signal="pressed" from="Button_load" to="." method="_on_Button_load_pressed"]
[connection signal="pressed" from="Button_save" to="." method="_on_Button_save_pressed"]
[connection signal="pressed" from="load/Button_load1" to="." method="_on_Button_load1_pressed"]
[connection signal="pressed" from="load/Button_load2" to="." method="_on_Button_load2_pressed"]
[connection signal="pressed" from="load/Button_load3" to="." method="_on_Button_load3_pressed"]
[connection signal="pressed" from="save/Button_save1" to="." method="_on_Button_save1_pressed"]
[connection signal="pressed" from="save/Button_save2" to="." method="_on_Button_save2_pressed"]
[connection signal="pressed" from="save/Button_save3" to="." method="_on_Button_save3_pressed"]
[connection signal="pressed" from="save/Button_resume" to="." method="_on_Button_resume_pressed"]
